# amplify-num

./: Cargo.toml  LICENSE  MANIFEST.yml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
apfloat/: Cargo.toml
apfloat/src/: ieee.rs  lib.rs  ppc.rs
apfloat/tests/: ieee.rs  ppc.rs
num/: Cargo.toml
num/src/: arithm.rs  bigint.rs  error.rs  hex.rs  lib.rs  posit.rs  smallint.rs  traits.rs
