[package]
authors = [
    "The Rust Project Developers",
    "Yudai Kiyofuji <own7000hr@gmail.com>"
]
name = "amplify_apfloat"
version = "0.3.0"
description = "rustc_apfloat with u256 backend to utilize Octuple precision floating-point format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
categories = ["no-std"]
readme = "../README.md"
keywords = ["float"]
edition = "2021"
rust-version = "1.60.0"

[features]
default = ["std"]
alloc = ["amplify_num/alloc"]
std = ["amplify_num/std"]

[dependencies]
amplify_num = { version = "0.5.2", path = "../num", default-features = false }
bitflags = "2.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
