[package]
name = "amplify_num"
version = "0.6.0"
description = "Amplifying numeric types: big-sized and bit-sized integers"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@ubideco.org>",
    "Yudai Kiyofuji <own7000hr@gmail.com>"
]
keywords = ["integers", "num", "wrap", "patterns"]
categories = ["mathematics", "no-std", "embedded", "science"]
repository = "https://github.com/rust-amplify/amplify-num"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_crate = { package = "serde", version = "1.0", features = ["derive"] }
serde_json = "1"

[features]
default = ["hex"]
all = ["std", "hex", "serde"]
std = []
serde = ["std", "serde_crate", "hex"]
hex = []
alloc = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
